# Dynamic-VINS

camera_model/: CMakeLists.txt  package.xml
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/src/: estimator_node.cpp  estimator_nodelet.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h
vins_estimator/src/factor/: projection_factor.cpp  projection_factor.h  projection_td_factor.h
vins_estimator/src/feature_manager/: feature_manager.cpp  feature_manager.h
vins_estimator/src/utility/: parameters.cpp  parameters.h  utility.h
