<?xml version="1.0"?>
<package format="3">
  <name>camera_model</name>
  <version>1.0.0</version>
  <description>camera_model package</description>
  <maintainer email="abhishek.patil@omron.com">Abhishek Patil</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <!-- <depend>rclpy</depend> -->
  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_components</depend> -->
  <depend>std_msgs</depend>
  <!-- <depend>image_transport</depend> -->
  <!-- <depend>cv_bridge</depend> -->
  <!-- <depend>pcl_conversions</depend> -->
  <depend>OpenCV</depend>

  <!-- <exec_depend>realsense2_camera</exec_depend> -->

  <!-- <exec_depend>launch_ros</exec_depend> -->
  <build_depend>ros_environment</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>